# kneeman

./: .gitignore  CLAUDE.md  EGUI_WEB_FINDINGS.md  GODOT_WEB.md  README.md  export_presets.cfg  justfile  project.godot
.dl/: .gitignore  dl-self-lint.dl  hook-skill-on-test.dl  lint-input-device.dl
.githooks/: pre-commit
deploy/: setup-vps.sh
deploy/coturn/: install.sh  turnserver.conf
deploy/nginx/: README.md  ev.conf  godot.conf  matchbox-ws.conf  nginx.conf  poses.conf  rtc.conf  sites-default.conf  turn.conf  web.conf
deploy/scripts/: _lib.sh  poses-pull.sh  poses.sh  signaling.sh  turn-check.sh  turn-secret.sh  turn-up.sh  turn.sh
deploy/systemd/: matchbox.service  smash-signaling.service
deploy/web/: push.js  sw.js  turn-probe.js
docs/game-architecture/: README.md  datastores.md  event-sourcing.md  netcode.md  reference-repos.md  rust-godot-stack.md  state-sync-consensus.md
plans/: controls-as-crate.md  forge-arena.md  gif-background-library.md  hitbox-modeling.md  ink-billiards.md  n-player.md  netplay-as-crate.md  reducer-trait.md  router-as-crate.md  server-flip-runbook.md  sim-as-library.md  single-process-server.md  stage-strokes-migration.md  terraria-camera-minimap.md  wall-gun.md  world-mapping.md  world-protocol.md
rust-sim/: Cargo.toml  rust-toolchain.toml  sim.gdextension  sim.gdextension.uid
rust-sim/.cargo/: config.toml
rust-sim/core/: Cargo.toml
rust-sim/core/src/: geo.rs  item.rs  lib.rs  physics.rs  stage.rs  tune.rs  za_warudo.rs
rust-sim/core/src/moves/: mod.rs  special.rs  throw.rs
rust-sim/core/src/world/: bridge.rs  fold.rs  migrate.rs  mod.rs  store.rs
rust-sim/core/tests/: sim.rs  world_formula_e2e.rs
rust-sim/net/: Cargo.toml
rust-sim/net/src/: lib.rs  lobby.rs
rust-sim/net/tests/: lobby.rs
rust-sim/shell/: Cargo.toml  build.rs
rust-sim/shell/fonts/: DejaVuSans.ttf.import
rust-sim/shell/src/: analytics.rs  controls.rs  debug_ui.rs  godot_store.rs  grid.rs  identity.rs  kneeman.rs  lib.rs  net.rs  roster.rs  rtc.rs  sprite.rs  theme.rs  toast.rs  world_runtime.rs
rust-sim/shell/src/controls/: mod.rs  pad.rs
rust-sim/shell/src/ui/: debug.rs  mod.rs
rust-sim/shell/src/ui/menu/: background.rs  controls.rs  feel.rs  home.rs  mod.rs  network.rs  router.rs  rules.rs
rust-sim/shell/src/ui/menu/characters/: mod.rs
rust-sim/shell/src/ui/menu/items/: mod.rs
rust-sim/shell/src/ui/themes/: dark.rs  mod.rs  xp.rs
rust-sim/world/: Cargo.toml
rust-sim/world/src/: bridge.rs  fold.rs  lib.rs  migrate.rs  store.rs
rust-sim/world/tests/: formula_e2e.rs
scenes/: game.tscn
signaling/: Cargo.toml  build.rs
signaling/src/: config.rs  events.rs  main.rs  push.rs  turn.rs
tools/: fetch_packs.py  packs.toml  requirements.txt  roa_get.py  roa_search.py  steam_qr.py
tools/pose-capture/: README.md  index.html  make_refs.py  slice_sheet.py
web/: Cargo.toml  index.html
web/src/: lib.rs
