# Virtual workspace. `just rust` runs `cargo build` here; the cdylib still lands at
# rust-sim/target/debug/libsmash_sim.dylib, so sim.gdextension paths are unchanged.
#
#   core/   smash_core  — PURE sim, no engine. step(state,input,tune)->state. Builds on
#                         plain native + wasm (no godot). This is the rollback/netcode core.
#   net/    smash_net   — ggrs rollback glue (Config, NetInput, SyncTest). matchbox later.
#   shell/  smash_sim   — gdext cdylib Godot loads: samples input -> step -> render.
[workspace]
resolver = "2"
members = ["core", "net", "shell"]
