# Virtual workspace. `just rust` runs `cargo build` here; the cdylib still lands at
# rust-sim/target/debug/libsmash_sim.dylib, so sim.gdextension paths are unchanged.
#
#   core/   smash_core  — PURE sim, no engine. step(state,input,tune)->state. Builds on
#                         plain native + wasm (no godot). This is the rollback/netcode core.
#   net/    smash_net   — ggrs rollback glue (Config, NetInput, SyncTest). matchbox later.
#   shell/  smash_sim   — gdext cdylib Godot loads: samples input -> step -> render.
[workspace]
resolver = "2"
members = ["core", "net", "shell", "world"]
exclude = ["vendor/gdext-egui", "vendor/ggrs"]

# Vendored crates patched to build for the emscripten web export (both desktop-identical):
#   gdext-egui 0.4.1 — `open` cfg-gated off wasm (emscripten compile_error!). src/context.rs.
#   ggrs 0.13.0      — js-sys gated to wasm32-unknown-unknown only; emscripten uses SystemTime.
#                      js-sys won't compile under threaded emscripten. src/network/protocol.rs.
[patch.crates-io]
gdext-egui = { path = "vendor/gdext-egui" }
ggrs = { path = "vendor/ggrs" }
