[package]
name = "smash-signaling"
version = "0.1.0"
edition = "2021"

# Standalone — NOT a member of the rust-sim gdext workspace (it pulls tokio, which has no business
# in the wasm sim build). Runs on the VPS next to matchbox; nginx reverse-proxies wss /rtc to it.
# Job: pair browsers two at a time and blindly relay the WebRTC handshake (SDP offer/answer + ICE)
# between the pair. It never sees gameplay — that goes peer-to-peer over the data channel.

[[bin]]
name = "smash-signaling"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
# axum owns the HTTP surface now: ws relay + JSON handlers + a tower-http ServeDir for the Godot
# web export (the /game/ static host that nginx used to serve). One process, one framework.
axum = { version = "0.7", features = ["ws"] }
axum-server = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "set-header", "cors"] }
# In-process TLS: obtain + auto-renew a Let's Encrypt cert via TLS-ALPN-01 on :443, so the binary
# terminates HTTPS itself (no nginx, no certbot). Only used when TLS_DOMAINS is set.
# ring backend (not the default aws-lc-rs): pure-ish, cross-compiles to musl via zig without cmake.
rustls-acme = { version = "0.13", default-features = false, features = ["axum", "ring", "tls12"] }
futures = "0.3"
web-push = { version = "0.11.0", default-features = false, features = ["hyper-client"] }
# web-push's hyper-client uses hyper-tls -> openssl-sys. Vendor openssl so the binary builds on any
# box without libssl-dev installed (build-time needs only a C compiler + perl, which the rust
# toolchain box already has). Keeps the artifact host-agnostic.
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
base64 = "0.22"

[profile.release]
opt-level = "s"
lto = true
