[package]
name = "smash_sim"
version = "0.1.0"
edition = "2021"

# cdylib == the native module Godot loads over GDExtension (like a napi-rs addon).
[lib]
crate-type = ["cdylib"]

[dependencies]
smash_core = { path = "../core" }
egui = "0.33"
futures-signals = "0.3"
gdext-egui = "0.4"
# godot-rust (gdext). Pin to whatever is current when you build; API shifts across minors.
# experimental-wasm(+nothreads) enables the Godot web export path (no-op on desktop). See GODOT_WEB.md.
godot = { version = "0.4", features = ["experimental-wasm", "experimental-wasm-nothreads"] }
