[package]
name = "smash_sim"
version = "0.1.0"
edition = "2021"

# cdylib == the native module Godot loads over GDExtension (like a napi-rs addon).
[lib]
crate-type = ["cdylib"]

[dependencies]
smash_core = { path = "../core" }
futures-signals = "0.3"
# godot-rust (gdext). Desktop uses the prebuilt API; wasm adds the web-export features below.
godot = "0.4"

# Desktop-only: egui debug overlay. gdext-egui pulls `open`, which doesn't build for wasm.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui = "0.33"
gdext-egui = "0.4"

# Web export (wasm32-unknown-emscripten): regenerate the API against the Godot binary (api-custom,
# fixes the 32-bit offset overflow), enable the experimental wasm path + lazy function tables.
[target.'cfg(target_arch = "wasm32")'.dependencies]
godot = { version = "0.4", features = ["api-custom", "experimental-wasm", "lazy-function-tables"] }
