[package]
name = "smash_sim"
version = "0.1.0"
edition = "2021"

# cdylib == the native module Godot loads over GDExtension (like a napi-rs addon).
[lib]
crate-type = ["cdylib"]

[dependencies]
smash_core = { path = "../core", features = ["storage"] } # storage = the sqlite WorldStore (durable worlds)
smash_net = { path = "../net" } # ggrs core + start_p2p; matchbox feature left OFF (detached)
futures-signals = "0.3"
ggrs = "0.13"     # for the NonBlockingSocket trait the Godot WebRTC transport implements
bincode = "1.3"   # ggrs Message wire (same bincode the matchbox impl used)
# godot-rust (gdext). Desktop uses the prebuilt API; wasm adds the web-export features below.
godot = "0.4"

# egui debug overlay. gdext-egui pulls `open` (compile_error! on emscripten), gated off wasm via
# the vendored patch in ../vendor/gdext-egui (see root Cargo.toml [patch.crates-io]).
egui = "0.33"
gdext-egui = "0.4"

# Web export (wasm32-unknown-emscripten): regenerate the API against the Godot binary (api-custom,
# fixes the 32-bit offset overflow), enable the experimental wasm path + lazy function tables.
[target.'cfg(target_arch = "wasm32")'.dependencies]
godot = { version = "0.4", features = ["api-custom", "experimental-wasm", "lazy-function-tables"] }
